# wg-bot

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250922_0200_create_vpn_users.py
app/: bot.py  db.py  main.py
app/config/: config_reader.py
app/filters/: get_vpn_filter.py  instruction_filter.py
app/handlers/: get_vpn.py  help_handler.py  instruction_handler.py  menu_handler.py  welcome_handler.py
app/keyboards/: menu_buttons.py  welcome_buttons.py
app/logger/: setup_logger.py
app/middlewares/: check_user.py
app/models/: user.py
app/repository/: users.py
app/vpnmanager/: generate_client.py  keys.py  parser.py
